# rat-king

./: .gitignore  DEC-8-RESEARCH.md  GRADIENT.md  MERGE-TAB-IMPROVEMENTS.md  NEXT_SESSION.md  PATTERNS.md  PATTERN_DEVELOPMENT.md  README.md  SVG-GROUPER.md  TESTING.md  benchmark_shapely.py  pyproject.toml  shapely-benchmark.html  teach_mat_rust.html
.github/workflows/: release.yml
crates/: Cargo.toml  MORE-REFACTORING.md  RATATUI.md  handwriting-service.md
crates/rat-king/: Cargo.toml
crates/rat-king-cli/: Cargo.toml
crates/rat-king-cli/src/: main.rs
crates/rat-king-cli/src/cli/: banner.rs  benchmark.rs  common.rs  fill.rs  harness.rs  hershey.rs  mod.rs  recipe.rs  showcase.rs  swatches.rs
crates/rat-king-cli/src/cli/analyze/: mod.rs  queries.rs  streaming.rs  tree.rs  types.rs
crates/rat-king-cli/tests/: integration.rs
crates/rat-king-core/: Cargo.toml
crates/rat-king-core/src/: geometry.rs
crates/rat-king-core/src/patterns/: crossspiral.rs  gyroid.rs  hilbert.rs  lissajous.rs  mod.rs  radial.rs  rose.rs  scribble.rs  spiral.rs
crates/rat-king/src/: chain.rs  clip.rs  geometry.rs  hatch.rs  lib.rs  order.rs  rng.rs  sketchy.rs  svg.rs
crates/rat-king/src/patterns/: brick.rs  concentric.rs  diagonal.rs  flowfield.rs  gosper.rs  grid.rs  guilloche.rs  gyroid.rs  harmonograph.rs  herringbone.rs  honeycomb.rs  lissajous.rs  meander.rs  mod.rs  peano.rs  pentagon14.rs  pentagon15.rs  phyllotaxis.rs  radial.rs  rose.rs  scribble.rs  sierpinski.rs  spiral.rs  stipple.rs  stripe.rs  sunburst.rs  tessellation.rs  truchet.rs  util.rs  voronoi.rs  wave.rs  wiggle.rs  zigzag.rs
llm-context/: API.md  ARCHITECTURE.md  CODEBASE.md  README.md
lore/: CATFIGHT_BONSAI_TOURNAMENT.md  LETTER_TO_RAT_KING.md  README.md  THE_WATCHING.md
rat_king/: __init__.py  cli.py  svg_io.py  vpype_plugin.py
rat_king/geometry/: __init__.py  polygon.py  types.py
rat_king/patterns/: __init__.py  concentric.py
tests/: __init__.py  test_concentric.py
