[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rat-king"
version = "0.1.0"
description = "vpype plugin for pen plotter workflows: line fills, pattern generation, and path optimization"
readme = "README.md"
license = "MIT"
authors = [
    { name = "DirtyBirdNJ" }
]
keywords = ["vpype", "pen-plotter", "svg", "fill-patterns", "hatching"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "shapely>=2.0",
    "numpy>=1.20",
    "svgpathtools>=1.6",
]

[project.optional-dependencies]
vpype = ["vpype>=1.14"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[project.scripts]
rat-king = "rat_king.cli:main"

[project.entry-points."vpype.plugins"]
rat-king = "rat_king.vpype_plugin:rat_king"

[project.urls]
Homepage = "https://github.com/dirtybirdnj/rat-king"
Repository = "https://github.com/dirtybirdnj/rat-king"

[tool.hatch.build.targets.wheel]
packages = ["rat_king"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
