[package]
name = "rat-king-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for rat-king pattern generation"

[[bin]]
name = "rat-king"
path = "src/main.rs"

[dependencies]
rat-king = { path = "../rat-king" }
ratatui = "=0.28.1"
crossterm = "0.28"
image = "=0.25.5"
ratatui-image = "=1.0.5"
resvg = "0.45"
tiny-skia = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
