[package]
name = "rat-king"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core geometry and pattern generation for rat-king"

[dependencies]
# SVG parsing - usvg provides fully resolved SVG tree
usvg = "0.45"

# Path parsing for d="" attributes
svgtypes = "0.16"

# Curve flattening - converts Bézier curves to polylines
lyon_geom = "1.0"

# XML parsing for data-* attributes (usvg doesn't preserve them)
quick-xml = "0.37"
